# open-deep-research

./: .env.example  .env.production  .gitignore  ARCHITECTURE.md  ENV_STRUCTURE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_OPTIMIZATION.md  README.md  REMOTE_ACCESS_FIX.md  REMOTE_ACCESS_SETUP.md  REMOTE_DEPLOYMENT.md  VLLM_SETUP.md  architecture_design.md  beginner_setup_guide.md  data_flow_analysis.md  dev_req.txt  docker-compose.prod.yml  docker-compose.yml  revised_architecture_design.md  setup_guide.md
backend/: .env.example  Dockerfile  cors_config.py  pyproject.toml  test_llm_providers.py
backend/src/open_deep_research/: __init__.py
backend/src/open_deep_research/api/: __init__.py  main.py
backend/src/open_deep_research/core/: llm_adapter.py  llm_providers.py  ollama_client.py  research_workflow.py
backend/src/open_deep_research/models/: state.py
backend/src/open_deep_research/prompts/: multilingual_prompts.py
backend/src/open_deep_research/services/: search_service.py  session_manager.py
backend/src/open_deep_research/utils/: language_detector.py
frontend/: Dockerfile  next.config.js  package-backup.json  package-lock.json  package-minimal.json  package-simple.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page-minimal.tsx  page-simple.tsx  page.tsx  providers.tsx
frontend/src/components/: DetailedProgress.jsx  HealthCheck.tsx  ResearchForm.tsx  ResearchProgress.jsx  ResearchProgress.tsx  ResearchResults.tsx
frontend/src/hooks/: useResearchSession.ts
frontend/src/lib/: api.ts
